Move all the haystacks constants definitions and constants validation definitions over to this repo so we can start setting it up.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "haystacks-constants",
   "version": "0.0.1",
   "description": "A repo to store reusable constants libraries for use with haystacks implemented applications & plugins.",
-  "main": "index.js",
+  "main": "./src/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
