Change the project type to module, so we can use import statements for ES6.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.3",
   "description": "A repo to store reusable constants libraries for use with haystacks implemented applications & plugins.",
   "main": "./src/main.js",
+  "type": "module",
   "scripts": {
     "vers": "standard-version -m \"chore(release) version %s \""
   },
